
dnl Process this file with autoconf to produce a configure script.

AC_REVISION($Id: configure.in,v 1.6 1997/10/04 00:33:46 jimg Exp $)
AC_INIT(write_val.cc)
AC_CONFIG_HEADER(config_writeval.h)
AC_CONFIG_AUX_DIR(../../etc)

AC_PREFIX_DEFAULT("\$(DODS_ROOT)")

dnl DODS_ROOT is the fully qualified pathname to the root of the DODS
dnl subtree. 

fulldir=`pwd`
dir=`basename ${fulldir}`
AC_SUBST(dir)
dods_root=`echo $fulldir | sed 's@\(.*\)/.*/.*@\1@'`
AC_DEFINE_UNQUOTED(DODS_ROOT, "$dods_root")

dnl `depend' is the command to use to generate dependencies for Makefiles.

depend=${dods_root}/etc/depend.sh
AC_SUBST(depend)

CFLAGS="-g -O2"
CXXFLAGS="-g -O2"
dnl GNU ld doesn't need this, but others do.
LDFLAGS="-g"

dnl Checks for programs.

AC_PROG_AWK
AC_PROG_CC
AC_ISC_POSIX
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_PROG_CPP
AC_PROG_INSTALL
DODS_MATLAB

dnl Define `V4_COMPAT' to get the matlab 5 mat.h file to work with matlab 4
dnl c++ code. This has no effect with matlab 4.

AC_DEFINE(V4_COMPAT)

DODS_GCC
DODS_PROG_LEX
DODS_PROG_BISON
DODS_CHECK_GCC_DEBUG
DODS_FIND_GPP_INC

DODS_OS
DODS_MACHINE
if test "$OS" = ultrix && test "$MACHINE" = vax; then
    case "$CC" in
        /bin/cc*|cc*)
echo "changing C compiler to \`vcc' because \`cc' floating-point is broken"
            CC=vcc
            ;;
    esac
fi

CXX=${CXX-g++}
AC_MSG_RESULT(Setting CXX to $CXX)
AC_SUBST(CXX)

if echo $INSTALL | egrep 'install-sh'
then
	INSTALL="$(DODS_ROOT)/etc/install-sh -c"
	AC_SUBST(INSTALL)
fi

AC_PATH_XTRA

dnl For some reason, configure on an Alpha-OSF/3 does not find X...

x_includes=${x_includes:="/usr/include"}
X_LIBS=${X_LIBS:="-L/usr/lib"}
dnl X_CFLAGS=${X_CFLAGS:="-I/usr/include"}

AC_SUBST(x_includes)
AC_SUBST(X_CFLAGS)
AC_SUBST(X_LIBS)
AC_SUBST(X_EXTRA_LIBS)
AC_SUBST(X_PRE_LIBS)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h limits.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_OFF_T
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(strerror strtol)

DODS_LIBS

DODS_WWW_ROOT

DODS_FIND_EXPECT

DODS_EFENCE

DODS_DBNEW

DODS_DEBUG_OPTION

DODS_CHECK_SIZES

if test $ac_cv_sizeof_long -eq 4 
then
	ARCHFLAG=-DARCH_32BIT
	AC_SUBST(ARCHFLAG)
elif test $ac_cv_sizeof_long -eq 8
then
	ARCHFLAG=-DARCH_64BIT
	AC_SUBST(ARCHFLAG)
else
	AC_MSG_ERROR(Could not determine architecture size - 32 or 64 bits)
fi

DODS_SWAP
DODS_NETLONG
DODS_DEFAULT(XDRFILE, xdrposix)
DODS_FILLVALUES

AC_OUTPUT(Makefile)

